[metadata]
name = utils-rbiswasfc
version = 0.0.1
author = Raja Biswas
author_email = rajabiswas92@outlook.com
description = A collection of utility functions
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rbiswasfc/utils
project_urls =
    Bug Tracker = https://github.com/rbiswasfc/utils/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU GENERAL PUBLIC LICENSE V3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src